<resources>
    <string name="app_name">SuperVend</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reviews_text">Reviews</string>
    <string name="cat">Category: %s</string>
    <string name="switchtext">Show Additional Info</string>
    <string name="filtertext">Filter by: </string>
    <string name="sorttext">Sort by: </string>

    <string name="info">We are SuperVend, a startup which specializes in making fascinatingly large vending machines! We want to bring the supermarket to you, so that you don\'t have to walk a total of 50m (LITERALLY) to your nearest supermarket and we can all get diabetes! We hope you will support us by using our products and providing helpful reviews and feedback! I also have a crippling addiction to latex gloves!</string>
    <string name="phoneNumber">+65 6222 6333</string>

    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signupBtn">SIGNUP</string>
    <string name="app_reviews">App Reviews</string>

    <string name="nameLengthWarning">! Your name must be 4 - 16 characters.</string>
    <string name="emailWarning">! Invalid email</string>
    <string name="passwordLengthWarning">! Your password must be at least 8 characters</string>
    <string name="passwordNumberWarning">! Your password must contain a number</string>
    <string name="passwordLetterWarning">! Your password must contain a letter</string>

    <string name="successAlertTitle">Success!</string>
    <string name="successAlertText">You have been successfully signed up!</string>
    <string name="failureAlertTitle">Oh no!</string>
    <string name="failureAlertText">One of your details are incorrect...</string>

    <string name="reviewNameHint">Name</string>
    <string name="reviewReviewHint">Review content</string>

    <string name="productSearchHint">Search products...</string>

    <string name="cat_a">All</string>
    <string name="cat_f">Food</string>
    <string name="cat_b">Beverage</string>
    <string name="cat_p">Pharmacy</string>
    <string name="cat_m">Military</string>
    <string name="cat_t">Tool</string>

    <string name="sort_cat">Category</string>
    <string name="sort_name">Name</string>
    <string name="sort_brand">Brand</string>
    <string name="sort_price">Price</string>
    <string name="sort_increase">Increasing</string>
    <string name="sort_decrease">Decreasing</string>

    <string name="r_sort_name">Name</string>
    <string name="r_sort_date">Date</string>
    <string name="r_sort_rating">Rating</string>

    <string name="settings">No settings yet:(</string>

</resources>