<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/rSortBtnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_cat"
        app:layout_constraintEnd_toStartOf="@+id/rSortBtnN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rSortBtnN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rSortBtnD"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/rSortBtnR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_brand"
        app:layout_constraintEnd_toStartOf="@+id/rSortBtnP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rSortBtnD" />

    <RadioButton
        android:id="@+id/rSortBtnP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rSortBtnR"
        app:layout_constraintTop_toBottomOf="@+id/rSortBtnN" />

    <RadioButton
        android:id="@+id/rSortBtnUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/sort_increase"
        app:layout_constraintEnd_toStartOf="@+id/rSortBtnDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rSortBtnR" />

    <RadioButton
        android:id="@+id/rSortBtnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/sort_decrease"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rSortBtnUp"
        app:layout_constraintTop_toBottomOf="@+id/rSortBtnP" />
</androidx.constraintlayout.widget.ConstraintLayout>